[REF] pre-commit: copier update

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,7 +1,8 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.17.2
+_commit: v1.20
 _src_path: gh:oca/oca-addons-repo-template
 ci: GitHub
+convert_readme_fragments_to_markdown: false
 generate_requirements_txt: true
 github_check_license: true
 github_ci_extra_env: {}
@@ -19,4 +20,6 @@ repo_description: 'TODO: add repo description.'
 repo_name: web
 repo_slug: web
 repo_website: https://github.com/OCA/web
+use_pyproject_toml: false
+use_ruff: false
 
